style: fix img background on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,1 +1,8 @@
 @import "./resources/styles/index.scss";
+
+.App {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
