--- a/src/Modules/About/About.module.scss
+++ b/src/Modules/About/About.module.scss
@@ -5,7 +5,11 @@
   background: rgba(0, 0, 0, 0.5) url("../../resources/images/about_bg.jpg");
   background-blend-mode: darken;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center;
   height: 100vh;
 
   .InfoContainer {
